Forbid access to sensitive APIs when no API key has been configured